--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="red-color">This is the website for git</h1>
+        <h1>This is the website for git</h1>
     </div>
 </body>
 </html>
